plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.liquibase.gradle' version '2.2.0'
	id 'jacoco'
}

group = 'lt.tastybytes'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
	implementation 'org.liquibase:liquibase-core'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-core:3.10.0'
	testImplementation 'com.h2database:h2'

	liquibaseRuntime 'org.liquibase:liquibase-core'
	liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.1.1'
	liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate6:4.26.0'
	liquibaseRuntime 'org.hibernate:hibernate-core:6.4.4.Final'
	liquibaseRuntime 'info.picocli:picocli:4.6.3'
	liquibaseRuntime 'org.mariadb.jdbc:mariadb-java-client'
}


liquibase {
	activities {
		main {
			changelogFile "src/main/resources/db/changelog/db.changelog-master.xml"
			url "jdbc:mariadb://localhost:3306/production_db"
			username "spring"
			password "securePassword123"
			referenceUrl "hibernate:spring:lt.tastybytes.receptaiserver?dialect=org.hibernate.dialect.MySQLDialect"
		}
	}
}


tasks.named('test') {
	useJUnitPlatform()
}

test {
	finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
	dependsOn test // tests are required to run before generating the report
}
